--- a/sorosoke_bank/bank/templates/bank/navbar.html
+++ b/sorosoke_bank/bank/templates/bank/navbar.html
@@ -15,7 +15,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li><a  class="dropdown-item" type="button" href="{% url 'savings_account' %}" >Savings</a></li>
-                <li><a  class="dropdown-item" type="button" href="{% url 'current_account' %}" >Current</a></li>
+                <li><a  class="dropdown-item" type="button" href="{% url 'create_account' %}" >Open an Account</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><button class="dropdown-item" type="button">Something else here</button></li>
               </ul>
