--- a/sorosoke_bank/bank/templates/bank/savings_account.html
+++ b/sorosoke_bank/bank/templates/bank/savings_account.html
@@ -12,7 +12,7 @@
 		<br>           
 		<button class="btn btn-primary" type="submit">Open</button>
 	</form>
-	<p class="text-center text-muted">Would you like to open a current account instead? <a href="{% url 'current_account' %}">Currents</a></p>
+	<p class="text-center text-muted">Would you like to open a current account instead? <a href="#">Currents</a></p>
 </div>
 
 {% endblock %}
