--- a/sorosoke_bank/bank/templates/bank/home.html
+++ b/sorosoke_bank/bank/templates/bank/home.html
@@ -4,6 +4,14 @@
 {% block content %}
 
 <!-- Profile card -->
+<div class="container text-center">
+<h1>
+    {{ users }}'s Profile
+</h1>
+</div>
+<br>
+
+
 
 <div class="row">
 
@@ -14,8 +22,13 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">{{ user.email }}</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">
+                Account Number : 
+                {% for account in all_account %}
+                  {{ account.account_number }}<br>
+                {% endfor %}
+              </h5>
+              <p class="card-text">This is a wider card</p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
@@ -28,7 +41,12 @@
         <div class="card-header">Header</div>
         <div class="card-body text-primary">
           <h5 class="card-title">Primary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Your accounts are: 
+            <br>
+            {% for account in all_account %}
+              {{ account.account_number }}<br>
+            {% endfor %}
+          </p>
         </div>
       </div>
 
