--- a/sorosoke_bank/bank/templates/bank/base.html
+++ b/sorosoke_bank/bank/templates/bank/base.html
@@ -6,7 +6,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
     <title>Sorosoke|Bank</title>
@@ -121,7 +120,7 @@
 <!-- //footer -->
 
 <!--  javascripts file here -->
-<script src="{% static 'bank/assets/js/jquery-3.3.1.min.js' %}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 
 <script src="{% static 'bank/assets/js/theme-change.js' %}"></script> <!-- //light and dark mode switch js -->
 
