credit and debit alerts

--- a/sorosoke_bank/account/templates/account/password_reset.html
+++ b/sorosoke_bank/account/templates/account/password_reset.html
@@ -7,7 +7,7 @@
 <!--Open an Account--> 
 <div class="container">
   <br><br>
-	<h1 class="text-center my-4">Login</h1>
+	<h1 class="text-center my-4">Reset Password</h1>
   {% if form.errors %}
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
       <h4>We're sorry, there was an error in your submission. Please check the form and try again.</h4>
@@ -23,11 +23,9 @@
 		</div>
 		<br>                  
 		<div class="form-group text-center">
-			<button class="btn btn-success" type="submit">Login</button>
-			<a class="text-muted ml-2" href="{% url 'password_reset' %}">Forgot password?</a>
+			<button class="btn btn-success" type="submit">Request Password Reset</button>
 		</div>
 	</form>
-  <p class="text-center">Don't have an account? <a href="{% url 'register_account' %}">Register</a> now.</p>
 </div>
 <br><br>
 {% endblock %}
