--- a/sorosoke_bank/bank/templates/bank/current_account.html
+++ b/sorosoke_bank/bank/templates/bank/current_account.html
@@ -3,16 +3,31 @@
 {% load crispy_forms_tags %}   
 {% block content %}
 
-<!--Register--> 
+
+
 <div class="container">
-	<h1 class="text-center">Open a Current Account</h1>
-	<form method="POST">
-		{% csrf_token %}
-		{{ form|crispy }}         
-		<br>           
-		<button class="btn btn-primary" type="submit">Open</button>
-	</form>
-	<p class="text-center text-muted">Would you like to open a savings account instead? <a href="#">Savings</a></p>
+    <div class="row">
+      {% include 'bank/profile_menu.html' %}
+      <div class="card-body">
+		<h1 class="text-center">Open a Current Account</h1>
+		<form method="POST">
+			{% csrf_token %}
+			{{ form|crispy }}         
+			<br>           
+			<button class="btn btn-primary" type="submit">Open</button>
+		</form>
+		<p class="text-center text-muted">Would you like to open a savings account instead? <a href="{% url 'savings_account' %}">Savings</a></p>
+        
+      </div>
+	</div>
 </div>
 
+<br>
+
+
 {% endblock %}
+
+
+
+
+
