--- a/sorosoke_bank/account/templates/account/register_account.html
+++ b/sorosoke_bank/account/templates/account/register_account.html
@@ -16,7 +16,7 @@
 	</form>
   <br>
   <div class="form-group text-center">
-    <p>Already have an account? <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a> now.</p>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a> now.</p>
   </div>
 </div>
 <br><br>
