--- a/sorosoke_bank/bank/templates/bank/transfer.html
+++ b/sorosoke_bank/bank/templates/bank/transfer.html
@@ -43,6 +43,10 @@
             <input class="form-control" id="amount" name="amount" pattern="\d+" title="Please enter only digits">
           </div>
           <div class="form-group">
+            <label for="description">Description</label>
+            <input class="form-control" id="description" name="description">
+          </div>
+          <div class="form-group">
             <label for="amount">Pin</label>
             <input class="form-control" id="pin" name="pin" type="password" pattern="\d{6}" title="Please enter only digits">
           </div>
@@ -74,6 +78,10 @@
           <div class="form-group">
             <label for="amount">Amount</label>
             <input class="form-control" id="amount" name="amount" pattern="\d+" title="Please enter only digits">
+          </div>
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input class="form-control" id="description" name="description">
           </div>
           <div class="form-group">
             <label for="amount">Pin</label>
