--- a/sorosoke_bank/bank/templates/bank/debit_alert.html
+++ b/sorosoke_bank/bank/templates/bank/debit_alert.html
@@ -48,7 +48,7 @@
 		<h1>Debit Alert</h1>
 		<p>Dear {{ user.first_name }} {{ user.last_name }},</p>
 
-		<u>Sorosoke Bank electronic Notification Service
+		<u>Sọrọ sókè Bank electronic Notification Service
 			(SSBeNS)</u>
 		<p>This is to notify you that your account with us has been debited.
 		
@@ -69,7 +69,7 @@
 
 		<p>Thank you for choosing our services.</p>
 
-		<p>Best regards,<br>Sorosoke Bank</p>
+		<p>Best regards,<br>Sọrọ sókè Bank</p>
 	</div>
 </body>
 </html>
