--- a/sorosoke_bank/bank/templates/bank/contact.html
+++ b/sorosoke_bank/bank/templates/bank/contact.html
@@ -11,7 +11,7 @@
 <section class="w3l-breadcrumb">
     <div class="container">
         <ul class="breadcrumbs-custom-path">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> Contact Us</li>
         </ul>
     </div>
