--- a/sorosoke_bank/bank/templates/bank/navbar.html
+++ b/sorosoke_bank/bank/templates/bank/navbar.html
@@ -3,7 +3,7 @@
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke px-0">
           <h1> <a class="navbar-brand" href="{% url 'home' %}">
-                  <span class="fa fa-cc-visa"></span> Bank Cards
+                  <span class="fa fa-cc-visa"></span> Sọrọ sókè Bank 
               </a></h1>
           <!-- if logo is image enable this   
   <a class="navbar-brand" href="#index.html">
