--- a/sorosoke_bank/bank/templates/bank/navbar.html
+++ b/sorosoke_bank/bank/templates/bank/navbar.html
@@ -63,7 +63,7 @@
               </ul>
           </div>
           <!-- toggle switch for light and dark theme -->
-          <!-- <div class="mobile-position">
+          <div class="mobile-position">
               <nav class="navigation">
                   <div class="theme-switch-wrapper">
                       <label class="theme-switch" for="checkbox">
@@ -75,7 +75,7 @@
                       </label>
                   </div>
               </nav>
-          </div> -->
+          </div>
           <!-- //toggle switch for light and dark theme -->
       </nav>
   </div>
