--- a/sorosoke_bank/bank/templates/bank/transaction_history.html
+++ b/sorosoke_bank/bank/templates/bank/transaction_history.html
@@ -32,7 +32,7 @@
             </div>
             {% empty %}
             <div class="card-body text-center py-5">
-                <p class="text-muted h4">No accounts available at this time.</p>
+                <p class="text-muted h4">No transactions available at this time.</p>
             </div>
             {% endfor %}
         
@@ -62,7 +62,7 @@
     <!-- Add more sections for account information, transactions, and settings -->
     {% else %}
     <div class="card-body text-center py-5">
-    <p class="text-muted h4">No accounts available at this time.</p>
+    <p class="text-muted h4">No transactions available at this time.</p>
     </div>
     {% endif %}
     </div>
